--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ html {
 .scoreBoard {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    width: 100%;
+    width: 200px;
     padding: 10px 0;
 }
 
